HDS-6106 Hide Tabs selection indicator when selected Tab is focused in Carbon themes to fix overlap issue

--- a/packages/components/src/styles/components/tabs.scss
+++ b/packages/components/src/styles/components/tabs.scss
@@ -88,6 +88,15 @@ $hds-tabs-sizes: ("medium", "large");
       }
     }
 
+    // If the Tab is selected, the hover ring position classes with the indicator underline position in carbon themes
+    @include hds-apply-only-if-carbon() {
+      &:has(.hds-tabs__tab-button:focus, .hds-tabs__tab-button.mock-focus) {
+        ~ .hds-tabs__tab-indicator {
+          display: none;
+        }
+      }
+    }
+
     .hds-tabs__tab-button {
       @include hds-apply-only-if-carbon() {
         font-weight: 600;
